RegDoctor(without mail) and RegMail models Added
